# zuna

./: .gitignore  README.md  analyze_pt_files.py  debug_channel_counts.py  pyproject.toml  test_inference_debug.py  test_single_file.py
examples/: tutorial_inference.py  tutorial_preprocessing.py
src/zuna/: __init__.py  pipeline.py  preprocessing.py  preprocessing_vis.py
src/zuna/inference/: __init__.py
src/zuna/inference/AY2l/: .gitignore  README.md
src/zuna/inference/AY2l/lingua/: setup.py
src/zuna/inference/AY2l/lingua/apps/AY2latent_bci/: augs.py  bottlenecks.py  compute_sigma.py  container.sh  conv_stem.py  data.py  data_lean.py  eeg_data.py  eeg_eval.py  eeg_feature_clf.py  feats.py  inspect_eeg_data.py  loop_eeg_eval.sh  serialize_list.py  timeout.py  train.py  train_compile_fwd.py  transformer.py  utils.py  utils_pt_mne.py  xattn.py
src/zuna/inference/AY2l/lingua/apps/AY2latent_bci/configs/: config_bci.yaml  config_bci_eval.yaml  config_bci_eval_moabb.yaml  config_infer.yaml
src/zuna/inference/AY2l/lingua/apps/AY2latent_bci/old/: eeg_eval_jm.py  eeg_eval_jm_2.py  eeg_eval_jm_2_loop.py  eeg_eval_moabb.py  eeg_eval_moabb_aux.py
src/zuna/inference/AY2l/lingua/lingua/: args.py  audio_data.py  cadamw.py  checkpoint.py  distributed.py  logger.py  metrics.py  optim.py  probe.py  transformer.py
src/zuna/preprocessing/: __init__.py  artifact_removal.py  batch.py  config.py  filtering.py  interpolation.py  io.py  normalizer.py  processor.py
src/zuna/utils/: __init__.py
src/zuna/visualization/: __init__.py  compare.py
tests/: test_preprocessing_batch.py
tutorials/: 1_tutorial_preprocessing.py  2_tutorial_inference.py  3_tutorial_pt_to_fif.py  4_tutorial_complete_pipeline.py  compare_pipeline_outputs.py  getting_started.py  getting_started_advanced.py  run_zuna_pipeline.py  test_pt_files.py  tmp_test.py  tutorial_inference.py  tutorial_preprocessing.py
tutorials/data/2_pt_input/: ds000000_000000_000001_d00_00003_12_1280.pt  ds000000_000000_000001_d00_00003_32_1280.pt  ds000001_000000_000002_d00_00003_11_1280.pt  ds000001_000000_000002_d00_00003_31_1280.pt
tutorials/data/3_pt_output/: config.yaml  ds000000_000000_000001_d00_00003_12_1280.pt  ds000000_000000_000001_d00_00003_32_1280.pt  ds000001_000000_000002_d00_00003_11_1280.pt  ds000001_000000_000002_d00_00003_31_1280.pt  temp_config.yaml
tutorials/data/4_fif_output/: sample1_raw.fif  sample2_raw.fif
tutorials/old_delete_before_publishing/: 2_tutorial_inference.py
