[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"



[project]
name = "zuna"
version = "0.0.1"
description = "Foundation model for EEG reconstruction and interpolation"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
authors = [
    {name = "Christopher Warner", email = "chris@zyphra.com"},
    {name = "Jonas Mago"},
    {name = "JR Huml"},
    {name = "Beren Millidge", email = "beren@zyphra.com"}
]

keywords = ["eeg", "foundation-model", "neuroscience", "preprocessing"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

#CHRIS TODO
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "mne>=1.0.0",
    "torch>=1.9.0",
    "joblib>=1.0.0",
]


[project.urls]
Homepage = "https://www.zyphra.com"
Repository = "https://github.com/Zyphra/zuna"
